cluster/openshift/jaime.yaml

####################################################
# SERVICES
####################################################

apiVersion: v1
kind: Service
metadata:
  name: jaime-front
  namespace: jaime
  labels:
    application: jaime
    component: frontend
spec:
  selector:
    app: jaime-front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-back
  namespace: jaime
  labels:
    application: jaime
    component: backend
spec:
  selector:
    app: jaime-back
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: jaime-agent-cluster
  namespace: jaime
  labels:
    application: jaime
    component: agent
spec:
  ports:
  - port: 7001
    name: agent
  selector:
    app: jaime-agent-cluster

---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: jaime
  labels:
    application: jaime
    component: db
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: postgres

---

####################################################
# ROUTES
####################################################

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaime-front
  namespace: jaime
  labels:
    application: jaime
    component: frontend
spec:
  to:
    name: jaime-front
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaime-back
  namespace: jaime
  labels:
    application: jaime
    component: backend
spec:
  to:
    name: jaime-back
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

---

####################################################
# DEPLOYMENTS
####################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: jaime
    component: frontend
  name: jaime-front
  namespace: jaime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-front
  template:
    metadata:
      labels:
        app: jaime-front
    spec:
      containers:
        - name: jaime
          image: 'ghcr.io/jaime-project/jaime-front:0.4.0'
          securityContext:
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5000
              protocol: TCP

---

####################################################
# STATEFULSETS
####################################################

kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    application: jaime-back
    component: backend
  name: jaime-back
  namespace: jaime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-back
  serviceName: jaime-back
  template:
    metadata:
      labels:
        app: jaime-back
    spec:
      volumes:
        - name: jaime-pvc
          persistentVolumeClaim:
            claimName: jaime-pvc
      containers:
        - name: jaime-back
          image: 'ghcr.io/jaime-project/jaime-back:0.4.0'
          securityContext:
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: jaime-pvc
              mountPath: /home/jaime/

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    application: jaime-agent-cluster
    component: agent
  name: jaime-agent-cluster
  namespace: jaime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaime-agent-cluster
  serviceName: jaime-agent-cluster
  template:
    metadata:
      labels:
        app: jaime-agent-cluster
    spec:
      volumes:
        - name: jaime-pvc
          persistentVolumeClaim:
            claimName: jaime-pvc
      containers:
        - name: jaime-agent-cluster
          image: 'ghcr.io/jaime-project/jaime-agent-cluster:0.4.0'
          securityContext:
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 7001
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: jaime-pvc
              mountPath: /home/jaime/shared

---

kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    application: postgres
    component: db
  name: postgres
  namespace: jaime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: postgres-pvc
          persistentVolumeClaim:
            claimName: postgres-pvc
      containers:
        - name: postgres
          image: docker.io/library/postgres:15
          securityContext:
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5432
              protocol: UDP
          imagePullPolicy: Always
          volumeMounts:
            - name: postgres-pvc
              mountPath: /var/lib/postgresql

---
